--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Fazal Haroon # your name (or website title) here
-logo: "/profile.jpeg?raw=true" # your photo (or logo) here
+logo: "/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
  Senior Frontend Engineer
   <br><br>
