--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Fazal Haroon # your name (or website title) here
 logo: "/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
- Senior Frontend Engineer
+ Software Developer
   <br><br>
-  <a href="mailto:aashima.ahuja811@gmail.com">aashima.ahuja811@gmail.com </a>
+  <a href="kharoon187@gmail.com">kharoon187@gmail.com </a>
   <br>
-  <a href="https://www.linkedin.com/in/aashimaahuja/">LinkedIn Profile</a>
+  <a href="https://www.linkedin.com/in/fazal-haroon-384b2013a/">LinkedIn Profile</a>
   <br>
-  <a href="https://www.gihub.com/aashimaahuja/">Gihub</a> 
+  <a href="https://github.com/Fazal-haroon/">Gihub</a> 
 theme: jekyll-theme-minimal
