--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   <a href="https://www.linkedin.com/in/fazal-haroon-384b2013a/">LinkedIn Profile</a>
   <br>
+  <a href="https://www.youtube.com/fazaltuts4uf">YouTube Channel</a>
+  <br>
   <a href="https://github.com/Fazal-haroon/">Gihub</a> 
 theme: jekyll-theme-minimal
