--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="kharoon187@gmail.com">kharoon187@gmail.com </a>
   <br>
-  <a href="https://www.linkedin.com/in/fazal-haroon-384b2013a/">LinkedIn Profile</a>
+  <a href="https://www.linkedin.com/in/fazalharoon/">LinkedIn Profile</a>
   <br>
   <a href="https://www.youtube.com/fazaltuts4uf">YouTube Channel</a>
   <br>
